--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "devDependencies": {
     "@playwright/test": "^1.49.1",
     "@types/node": "^22.10.7"
-  }
+  },
+  "dependencies": {
+    "@azure/arm-resources": "^5.2.0",
+    "@azure/identity": "^4.6.0"
+  },
+  "type": "module"
+
 }
